--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-dimension-v2",
-  "description": "Gatsby Starter - Dimension V2",
+  "name": "YdaWorks",
+  "description": "My Portfolio web site",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Tomoaki Yoshida",
   "dependencies": {
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
