--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,4 @@ jobs:
       # - run: yarn test
 
       # run deploy!
-      - yarn build && firebase deploy
+      - run: yarn build && firebase deploy
