--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:8.15
+      - image: circleci/node:10.13.0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -38,4 +38,5 @@ jobs:
       # - run: yarn test
 
       # run deploy!
+      - run: yarn global add firebase-tools
       - run: yarn build && firebase deploy
