--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,10 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: yarn install
+      - run: npm install
       - run:
           name: 'Install Dependecies'
-          command: yarn global add firebase-tools
+          command: npm install --save-dev firebase-tools
 
       - save_cache:
           paths:
