--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
+    "firebase-tools": "^7.12.1",
     "prettier": "^1.14.2"
   },
   "repository": {
