add oath2.0 mail setting

--- a/firebase.json
+++ b/firebase.json
@@ -8,9 +8,6 @@
     ]
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix ./functions run lint"
-    ],
-    "source": "/"
+    "source": "functions"
   }
 }
