--- a/functions/.runtimeconfig.json
+++ b/functions/.runtimeconfig.json
@@ -1,6 +1,9 @@
 {
   "gmail": {
+    "refreshtoken": "1//04Yl0XlRot-fxCgYIARAAGAQSNwF-L9IrLIYvKEUvyCNfWE4ab3-jcr9s4e4XlJnRnC1CHAqd0rZYnYwaDq3X5kQvDP6RBoVezqg",
+    "clientsecret": "syyPdqO-L4_waT9VVJqf4z0S",
     "password": "“Rekuill0”",
+    "clientid": "831567689940-qnq0tnsmchvk4bm517uiak8bvnsphrsg.apps.googleusercontent.com",
     "email": "“ydaydada@gmail.com”"
   },
   "hotmail": {
